formatted as regular article, but def is more of a word history that needs some editing TLC <terra firma#66976>

--- a/wiki/terra_firma.wikitext
+++ b/wiki/terra_firma.wikitext
@@ -1,1 +1,23 @@
-'''Terra firma''' is a Latin expression, but often used in English, meaning "dry land", as against water. The phrase, translated into Spanish as ''Tierra Firma'', served in the 16th century as the name of the Isthmus of Panama.
+==English==
+===Etymology===
+Latin
+
+===Noun===
+'''terra firma'''<!-- surely not capitalised -->
+
+# a Latin expression, but often used in English, meaning "dry land", as against water. The phrase, translated into Spanish as ''[[Tierra Firma]]'', served in the 16th century as the name of the Isthmus of Panama.
+
+<!-- is "solid ground" a synonym? i think so -->
+
+====Translations====
+*Spanish: [[tierra firma]] ''f''<!-- please check that this is idiomatic -->
+
+----
+
+==Latin==
+===Noun===
+'''terra firma'''<!-- surely not capitalised -->
+
+# {{substub}}
+
+{{rfc}}
