--- a/wiki/%E7%AE%AD.wikitext
+++ b/wiki/%E7%AE%AD.wikitext
@@ -12,8 +12,7 @@
 
 * '''Common Meaning'''
 *# [[arrow]]
-*# type of bamboo
-
+*# type of [[bamboo]]
 
 ----
 
@@ -42,6 +41,7 @@
 *[[箭在弦上]]
 *[[箭竹]]
 *[[箭镞]]
+*[[箭魚]], [[箭鱼]]
 
 * '''Other info''': 
 
@@ -57,9 +57,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 전
+* '''[[Hangeul]]''': [[전]]
 
 * '''[[Eumhun]] reading''': 
 
