--- a/wiki/Alexander.wikitext
+++ b/wiki/Alexander.wikitext
@@ -14,5 +14,6 @@
 
 ====Translations====
 *Bulgarian: [[Александър]]
+*Polish: [[Aleksander]]
 *Slovene: [[Aleksander]]
 *Spanish: [[Alejandro]] ''m'', [[Alejandra]] ''f''
