A large, icy object of asteroid or planet size. <ice dwarf#67015>

--- a/wiki/ice_dwarf.wikitext
+++ b/wiki/ice_dwarf.wikitext
@@ -6,10 +6,12 @@
 
 '''Ice Dwarf''' (plural: ''Ice Dwarfs'')
 
-# An object that is larger than the nucleus of a normal [[comet]] and icier than an [[asteroid]]. Ice dwarfs measure up to several hundred kilometers across and populate the [[w:Oort Cloud|Oort Cloud]] and [[w:Kuiper Belt|Kuiper Belt]] in large numbers.
+# An object that is larger than a [[comet]] and icier than an [[asteroid]], measuring up to several hundred kilometers across. [[Pluto]] is considered an ice dwarf [[planet]]. Astronomers believe that the [[w:Kuiper Belt|Kuiper Belt]] and [[w:Oort Cloud|Oort Cloud]] contain thousands of ice dwarf planets, a few of which may be as large as Earth or Mars.
 
 ===External links===
 
 *Definition of [http://www.daviddarling.info/encyclopedia/I/icedwarf.html ice dwarf] at [http://www.daviddarling.info/encyclopedia/ETEmain.html The Encyclopedia of Astrobiology, Astronomy, and Spaceflight].
+*[http://www.discover.com/issues/feb-04/departments/discover-dialogue/?page=2 Interview with Alan Stern].
+*Wikipedia article on [[w:90377 Sedna|90377 Sedna]], an ice dwarf detected in the Kuiper Belt.
 *Wikipedia article on the [[w:Oort Cloud|Oort Cloud]]
 *Wikipedia article on the [[w:Kuiper Belt|Kuiper Belt]]
