--- a/wiki/testicle.wikitext
+++ b/wiki/testicle.wikitext
@@ -6,6 +6,9 @@ From Latin '''[[testiculum]]''', ''testicle'', literally ''little witness'', fro
 
 # male sex [[gland]] which produces sperm and male hormones, found in some types of animals
 
+===Synonyms===
+see [[WikiSaurus:testicles]]
+
 == Translations ==
 *[[Dutch]]: [[teelbal]] ''m'', [[testikel]] ''n''
 *[[Finnish]]: [[kives]]
