--- a/wiki/%E6%89%8B.wikitext
+++ b/wiki/%E6%89%8B.wikitext
@@ -33,7 +33,7 @@
 == [[Japanese]] [[Kanji]] ==
 
 * '''Readings'''
-** '''[[On]]''': [[しゅ]] (shu)
+** '''[[On]]''': [[しゅ]], [[しゅう]] (shu)
 ** '''[[Kun]]''': [[て]] (te), [[てずから]] (tezukara)
 
 * '''Other info''':  
