/* Pronunciation */ improve <pray#66906>

--- a/wiki/pray.wikitext
+++ b/wiki/pray.wikitext
@@ -1,8 +1,8 @@
 ==English==
 ===Pronunciation===
-*IPA: /ˈpɹeɪ/
-====Homophone====
-*[[prey]]
+*prā, /preɪ/, /<tt>preI</tt>/
+*:'''Homophones''': [[prey]]
+*:[[Rhymes:English:-eɪ|Rhymes: -eɪ]]
 
 ===Verb===
 '''pray'''
