--- a/wiki/prey.wikitext
+++ b/wiki/prey.wikitext
@@ -1,8 +1,11 @@
 ==English==
+===Pronunciation===
+*prā, /preɪ/, /<tt>preI</tt>/
+*:'''Homophones''': [[pray]]
+*:[[Rhymes:English:-eɪ|Rhymes: -eɪ]]
 
 ===Noun===
-
-'''prey'''
+'''prey''' (''uncountable'')
 
 #Anything, as goods, etc., taken or got by violence; anything taken by force from an enemy in war; spoil; booty; plunder.
 #That which is or may be seized by animals or birds to be devoured; hence, a person given up as a victim.
