--- a/wiki/%E9%AD%89.wikitext
+++ b/wiki/%E9%AD%89.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': a kind of monster
+* '''Common Meaning''': a kind of [[monster]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
