/* Japanese [[Furigana]] */ <しゅ#8678>

--- a/wiki/%E3%81%97%E3%82%85.wikitext
+++ b/wiki/%E3%81%97%E3%82%85.wikitext
@@ -6,3 +6,4 @@
 # [[酒]]: (on yomi, suffix) [[sake]], rice wine
 # [[主]]: the [[Lord]]
 # [[朱]]: [[vermilion]], [[cinnabar]], [[vermeil]]
+# [[手]]: [[hand]], [[handwriting]], skilled man
