senses of translation, with examples <loi#66982>

--- a/wiki/loi.wikitext
+++ b/wiki/loi.wikitext
@@ -1,8 +1,11 @@
 ==French==
 ===Noun===
-'''loi''' ''f''
+'''loi''' ''f'' (''plural'' '''lois''')
 
-#[[law]]
+#[[law]] (''legal code'')
+#:''la loi de la France'' &ndash; the law in France, French law
+#law (''scientific principle'')
+#:''la loi de Boyle'' &ndash; Boyle's law
 
 ===Related terms===
 *[[légal]]
@@ -12,4 +15,4 @@
 
 ===See also===
 *[[juridique]]
-*[[jury]]
+*[[jury#French|jury]]
