--- a/wiki/chav.wikitext
+++ b/wiki/chav.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''chav''' (''plural'' '''chavs''')
 
-#(''British, derogatory'') A member of the [[working class]] in the [[United Kingdom]] who is seen as [[under-educated]]; to have poor taste, especially in their choice of clothes; and to have poor social skills.
+#(''British, derogatory'') A member of the [[working class]] in the [[United Kingdom]] who is seen as [[under-educated]]; to have poor taste, especially in their choice of clothes, music and modified road vehicles; Believed to have poor social skills.  Associated with drinking low cost alcoholic drinks.
 
 ===See also===
 *[[pikey]]
