--- a/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
+++ b/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
@@ -6,6 +6,6 @@
 #:укроп огородный (ogoródnyj) ''garden dill''
 #:укроп пахучий (pakhúčij) ''fragrant dill''
 # [[fennel]]
-#:укроп аптечный (aptéčnyj), ''pharmacy dill''
-#:укроп волошский (vóloshskij), ''voloshsky dill''
-#:укроп сладкий (sládkij), ''sweet dill''
+#:укроп аптечный (aptéčnyj) ''pharmacy dill''
+#:укроп волошский (vólošskij) ''voloshsky dill''
+#:укроп сладкий (sládkij) ''sweet dill''
