changed def to translation and moved to proper n <vulcano#66981>

--- a/wiki/vulcano.wikitext
+++ b/wiki/vulcano.wikitext
@@ -1,9 +1,13 @@
 ==Italian==
 ===Noun===
-'''vulcano''' ''m''
+'''vulcano''' ''m'' (''plural'' '''vulcani''')
 
-# [[volcano]]
-# a Roman god
+#[[volcano]]
+
+===Proper noun===
+'''Vulcano'''
+
+#[[Vulcan]] (''Roman god'')
 
 ===Related terms===
 *[[volcanico]]
@@ -13,4 +17,5 @@
 
 ===See also===
 *[[Efesto]]
+*[[montagna]]
 *[[monte]]
