corrected defs; added another; Wikipedia link <misnomer#66977>

--- a/wiki/misnomer.wikitext
+++ b/wiki/misnomer.wikitext
@@ -1,5 +1,11 @@
 ==English==
 === Noun ===
-'''misnomer'''
-#An error in naming a person or place.
-#Use of a wrong name.
+'''misnomer''' (''plural'' '''misnomers''')
+
+#An unsuitable or misleading name (for something).
+#:''One of Robin Hood's merry men was Little John, which was a misnomer has he was supposedly over seven feet tall.''
+#(''erroneously'') Something that is not true; a [[myth]].
+#:''It is a misnomer that elephants are afraid of mice.''
+
+===See also===
+*[[w:misnomer|Wikipedia article on misnomers]]
