--- a/wiki/Vulcan.wikitext
+++ b/wiki/Vulcan.wikitext
@@ -1,11 +1,14 @@
 ===Proper noun===
 '''Vulcan'''
 
-#The Roman god of fire and metalwork.
-#A theoretical planet inside the orbit of [[Mercury]].
-#A fictional planet invented for the ''Star Trek'' TV series.
-#A member of the humanoid race inhabiting the planet Vulcan (3).
-#Language as spoken by (4).
+#(''mythology'') The Roman god of fire and metalwork.
+#(''astronomy'') A theoretical planet inside the orbit of [[Mercury]].
+#(''science fiction'') A fictional planet in ''[[w:Star Trek|Star Trek]]''.
+#(''science fiction'') A member of the humanoid race inhabiting the fictional planet Vulcan.
+#(''science fiction'') The language spoken by these humanoids.
 
-====Related Terms====
+====Related terms====
 *[[vulcanize]]
+
+===See also===
+*[[w:Vulcan (mythology)|Wikipedia article on the god Vulcan]]
