--- a/wiki/misnomer.wikitext
+++ b/wiki/misnomer.wikitext
@@ -3,7 +3,7 @@
 '''misnomer''' (''plural'' '''misnomers''')
 
 #An unsuitable or misleading name (for something).
-#:''One of Robin Hood's merry men was Little John, which was a misnomer has he was supposedly over seven feet tall.''
+#:''One of Robin Hood's merry men was Little John, whose name was a misnomer as he was supposedly over seven feet tall.''
 #(''erroneously'') Something that is not true; a [[myth]].
 #:''It is a misnomer that elephants are afraid of mice.''
 
