--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -9,7 +9,7 @@ Arabic [[الله]] (allāh), from &lrm;[[ال-]]&rlm; (al-) "the" + [[اله|إ
 
 ===Usage Note===
 
-While the Arabic [[الله]] is used generically to refer to God in Jewish, Christian, Islamic and presumably other contexts, current English usage almost always restricts the term to Islamic contexts only.  Various newspaper style manuals recommend translating the Arabic word as ''God'', as this better reflects Arabic usage, but the term is often left untranslated in Islamic contexts.  Thus either "Allah is great" or "God is great" may be seen.
+While the Arabic [[الله]] is used generically to refer to God in Jewish, Christian, Islamic and presumably other contexts, current English usage almost always restricts the corresponding term ''Allah'' to Islamic contexts only.  Various newspaper style manuals recommend translating the Arabic word as ''God'', as this better reflects Arabic usage, but the term is often left untranslated in Islamic contexts.  Thus either "Allah is great" or "God is great" may be seen.
 
 ====Translations====
 {| border=0  width=100%
