v -> vt; +"to" <porre#67014>

--- a/wiki/porre.wikitext
+++ b/wiki/porre.wikitext
@@ -1,8 +1,8 @@
 ==Italian==
-===Verb===
+===Transitive verb===
 '''porre'''
 
-# [[put]], [[place]]
+#to [[put]], to [[place]]
 
 ===Related terms===
 *[[ponente]]
