changed comment to Webster template; some minor formatting <antipathy#41805>

--- a/wiki/antipathy.wikitext
+++ b/wiki/antipathy.wikitext
@@ -1,12 +1,12 @@
 ==English==
 ===Etymology===
-Latin [[antipathia]], Gr. ?; ? against + ? to suffer. Compare with French [[antipathie]].  See  [[Pathos]].
+Latin ''[[antipathia]]'', from Greek ?; ?, against + ?, to suffer; compare French ''[[antipathie]]''.  See also '''[[pathos]]'''.
 
 ===Pronunciation===
 IPA: [[WEAE]] /ænˈtɪp.ə.θi/
 
 ===Noun===
-plural '''antipathies'''
+'''antipathy''' (''plural'' '''antipathies''')
 
 # Contrariety or opposition in feeling; settled aversion or dislike; repugnance; distaste.
 #:    Inveterate antipathies against particular nations, and passionate attachments to others, are to be avoided. --Washington.
@@ -17,4 +17,4 @@ plural '''antipathies'''
 ====Synonyms====
 [[Hatred]]; [[aversion]]; [[dislike]]; [[disgust]]; [[distaste]]; [[enmity]]; [[ill will]]; [[repugnance]]; [[contrariety]]; [[opposition]].
 
-<!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
+{{webster}}
