modified def; +etym & uncountable; usage note; see also; translations from Wikipedia; der <homophobia#66959>

--- a/wiki/homophobia.wikitext
+++ b/wiki/homophobia.wikitext
@@ -1,4 +1,28 @@
 ==English==
+===Etymology===
+[[homo-]], from [[homosexual]], + [[-phobia]]; coined in 1971 by psychologist [[w:George Weinberg|George Weinberg]] in his book ''Society and the Healthy Homosexual''.
+
 ===Noun===
-'''homophobia'''
-#Fear or dislike of homosexuals.
+'''homophobia''' (''[[uncountable]]'')
+
+#[[Antipathy]] towards [[homosexual]]s.
+
+====Usage note====
+*Along with some other terms ending in ''-phobia'', '''homophobia''' refers to an antipathy rather than a fear, although it can be said that homophobia is motivated by fear.
+
+====Translations====
+*French: [[homophobie]] ''f''
+*Japanese: [[同性恋恐惧症]]
+*Polish: [[homofobia#Polish|homofobia]]
+*Portuguese: [[homofobia#Portuguese|homofobia]] ''f''
+*Spanish: [[homofobia#Spanish|homofobia]] ''f''
+*Swedish: [[homofobi]]
+
+====Derived terms====
+*[[internalised homophobia]]
+
+===See also===
+*[[heterosexism]]
+*[[homoerotophobia]]
+*[[Islamophobia]]
+*[[w:homophobia|Wikipedia article on homophobia]]
