+rel (and sorted) <random#37481>

--- a/wiki/random.wikitext
+++ b/wiki/random.wikitext
@@ -42,9 +42,11 @@ My bellend is infected and currently on fire, can sum1 help me please
 #: ''The party was boring.  It was full of randoms.''
 
 ===Related terms===
-*[[randomness]]
-*[[randomise]], [[randomize]]
-*[[random number]]
 *[[at random]]
 *[[pseudorandom]]
+*[[random number]]
+*[[randomise]], [[randomize]]
+*[[randomness]]
+*[[randomnity]]
+*[[randomology]]
 *[[stochastic]]
