+obsolete sense, other see also and syns <homophobia#66959>

--- a/wiki/homophobia.wikitext
+++ b/wiki/homophobia.wikitext
@@ -5,39 +5,29 @@
 ===Noun===
 '''homophobia''' (''[[uncountable]]'')
 
-#(''obsolete'') A [[pathological]] fear of [[men]].
 #[[Antipathy]] towards [[homosexual]]s.
 
 ====Usage note====
 *Along with some other terms ending in ''-phobia'', '''homophobia''' (in its [[extant]] sense) refers to an antipathy rather than a fear, although it can be said that homophobia is motivated by fear.
 
-====Synonyms====
-*(''fear of men''): [[androphobia]]
-
 ====Translations====
-
-'''antipathy towards homosexuals'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
 *French: [[homophobie]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
 *Japanese: [[同性恋恐惧症]]
 *Polish: [[homofobia#Polish|homofobia]]
 *Portuguese: [[homofobia#Portuguese|homofobia]] ''f''
 *Spanish: [[homofobia#Spanish|homofobia]] ''f''
 *Swedish: [[homofobi]]
-|}
-|}
 
 ====Derived terms====
 *[[internalised homophobia]]
+
+===Etymology===
+Latin ''[[homo]]'', man, + [[-phobia]].
+
+#(''obsolete'') A [[pathological]] fear of [[men]].
+
+====Synonyms====
+*[[androphobia]]
 
 ===See also===
 *[[gynephobia]]
