--- a/wiki/prate.wikitext
+++ b/wiki/prate.wikitext
@@ -12,3 +12,5 @@
 
 #To talk much and to little purpose; to be loquacious; to speak foolishly; to babble.
 #To utter foolishly; to speak without reason or purpose; to chatter, or babble.
+
+{{webster}}
