--- a/wiki/vacca.wikitext
+++ b/wiki/vacca.wikitext
@@ -2,7 +2,22 @@
 ===Noun===
 '''vacca''', ''f'' (Plural: [[vacche]])
 
-: a [[cow]]
+# a [[cow]]
+
+===Related terms===
+*[[vaccaio]]
+*[[vaccaro]]
+*[[vaccherella]]
+*[[vaccheria]]
+*[[vacchetta]]
+*[[vaccino]]
+
+===See also===
+*[[bue]]
+*[[toro]]
+*[[vitello]]
+
+----
 
 ==Latin==
 ===Noun===
