-random comments, +rel <random#37481>

--- a/wiki/random.wikitext
+++ b/wiki/random.wikitext
@@ -32,10 +32,6 @@
 *[[Spanish]]: [[aleatorio]]
 *Swedish: [[slumpvis]] (1,4), [[slumpmässig]] (1,4)
 
-im am sitting near a girl with hairy nipples
-
-My bellend is infected and currently on fire, can sum1 help me please
-
 ===Noun===
 
 # (''colloquial, probably US only'') A completely undistinguished person.
@@ -47,6 +43,8 @@ My bellend is infected and currently on fire, can sum1 help me please
 *[[random number]]
 *[[randomise]], [[randomize]]
 *[[randomness]]
+*[[randomnitude]]
 *[[randomnity]]
 *[[randomology]]
+*[[randomosity]]
 *[[stochastic]]
