--- a/wiki/precipitous.wikitext
+++ b/wiki/precipitous.wikitext
@@ -7,3 +7,5 @@
 #Steep, like a precipice; as, a precipitous cliff or mountain.
 #Headlong; as, precipitous fall.
 #Hasty; rash; quick; sudden; precipitate; as, precipitous attempts.
+
+{{webster}}
