--- a/wiki/toro.wikitext
+++ b/wiki/toro.wikitext
@@ -1,14 +1,26 @@
-==[[Spanish]], [[Italian]]==
-===[[Translations]]===
+==Italian==
+===Noun===
+'''toro''' ''m''
 
-*[[Bavarian]]: [[Bummal]] (1,2)
-*[[Danish]]: [[tyr]] (1,2,3)
-*[[Dutch]]: [[stier]] ''m'' (1,2)
-*[[English]]: [[bull]]
-*[[French]]: [[taureau]] ''m'' (1,2)
-*[[German]]: [[Bulle]] ''m'' (1,2,4), [[Stier]] ''m'' (2)
-*[[Greek]]: [[ταύρος]] (tauros) (tavros) ''m'' (2)
-*[[Interlingua]]: [[tauro]] (2
-*[[Latin]]: [[taurus]] (2)
-*[[Portuguese]]:[[touro]] ''m'', [[toiro]] ''m'' (2);
-*[[Romanian]]: [[taur]] ''
+# [[bull]]
+# [[Taurus]]
+
+===Related terms===
+*[[toreare]]
+*[[torello]]
+*[[torero]]
+
+===See also===
+*[[bue]]
+*[[toro]]
+*[[vacca]]
+*[[vitello]]
+*[[zodiacale]]
+
+----
+
+==Spanish==
+===Noun===
+'''toro''' ''m''
+
+#[[bull]]
