--- a/wiki/predecessor.wikitext
+++ b/wiki/predecessor.wikitext
@@ -5,3 +5,5 @@
 '''predecessor'''
 
 #One who precedes; one who has preceded another in any state, position, office, etc.; one whom another follows or comes after, in any office or position.
+
+{{webster}}
