--- a/wiki/vitello.wikitext
+++ b/wiki/vitello.wikitext
@@ -4,3 +4,12 @@
 
 #[[calf]] (''animal'')
 #[[veal]]
+
+===Related terms===
+*[[vitellino]]
+*[[vitellone]]
+
+===See also===
+*[[bue]]
+*[[toro]]
+*[[vacca]]
