--- a/wiki/predicament.wikitext
+++ b/wiki/predicament.wikitext
@@ -6,3 +6,5 @@
 
 #A class or kind described by any definite marks; hence, condition; particular situation or state; especially, an unfortunate or trying position or condition.
 #See Category.
+
+{{webster}}
