--- a/wiki/premise.wikitext
+++ b/wiki/premise.wikitext
@@ -8,3 +8,5 @@
 #Either of the first two propositions of a syllogism, from which the conclusion is drawn.
 #Matters previously stated or set forth; esp., that part in the beginning of a deed, the office of which is to express the grantor and grantee, and the land or thing granted or conveyed, and all that precedes the habendum; the thing demised or granted.
 #A piece of real estate; a building and its adjuncts; as, to lease premises; to trespass on another's premises.
+
+{{webster}}
