--- a/wiki/prevalence.wikitext
+++ b/wiki/prevalence.wikitext
@@ -5,3 +5,5 @@
 '''prevalence'''
 
 #The quality or condition of being prevalent; superior strength, force, or influence; general existence, reception, or practice; wide extension; as, the prevalence of virtue, of a fashion, or of a disease; the prevalence of a rumor.
+
+{{webster}}
