typo fix <gyratory#64896>

--- a/wiki/gyratory.wikitext
+++ b/wiki/gyratory.wikitext
@@ -4,6 +4,6 @@
 
 == Adjective==
 
-Moving in a [[circle]], or [[spiral]]ly; revolving; wh1irling around.
+Moving in a [[circle]], or [[spiral]]ly; revolving; whirling around.
 
 [[es:giratorio]]
