--- a/wiki/prey.wikitext
+++ b/wiki/prey.wikitext
@@ -10,3 +10,5 @@
 #Anything, as goods, etc., taken or got by violence; anything taken by force from an enemy in war; spoil; booty; plunder.
 #That which is or may be seized by animals or birds to be devoured; hence, a person given up as a victim.
 #The act of devouring other creatures; ravage.
+
+{{webster}}
