--- a/wiki/pride.wikitext
+++ b/wiki/pride.wikitext
@@ -12,3 +12,5 @@
 #Show; ostentation; glory.
 #Highest pitch; elevation reached; loftiness; prime; glory; as, to be in the pride of one's life.
 #Consciousness of power; fullness of animal spirits; mettle; wantonness; hence, lust; sexual desire; esp., an excitement of sexual appetite in a female beast.
+
+{{webster}}
