--- a/wiki/assage.wikitext
+++ b/wiki/assage.wikitext
@@ -5,3 +5,5 @@ Derived from the [[American]] term for the rear end, [[Ass]]
 Some examples of use:
 "It kicks major assage!" meaning it is very good but
 "It sucks major assage!" which means it is very bad.
+
+Property of Lisa A, UK Copyright Dec 2004
