+translations, +verb <pelt#62365>

--- a/wiki/pelt.wikitext
+++ b/wiki/pelt.wikitext
@@ -7,3 +7,11 @@
 #The skin of a beast with the hair on; a raw or undressed hide; a skin preserved with the hairy or woolly covering on it. See 4th Fell.
 #The human skin.
 #The body of any quarry killed by the hawk.
+
+====Translations====
+* Dutch: [[huid]] (1, 2), [[vel]] (1, 2), [[pels]] (1)
+* German: [[pelz]] (1)
+
+===Verb===
+#To throw missiles. <!-- copied from GCide, please put other defs if you can! -->
+#To throw out words.
