--- a/wiki/planned_obsolescence.wikitext
+++ b/wiki/planned_obsolescence.wikitext
@@ -1,6 +1,6 @@
 '''Planned obsolescence''' (also '''built-in obsolescence''' (UK)) is the conscious decision on the part of an agency to produce a consumer product that will become [[obsolete]] in a defined time frame.  Planned obsolescence has great benefits for a producer in that it means a consumer will buy their product repeatedly, as their old one is no longer functional or desirable.  It exists in many different products from vehicles to lightbulbs, from buildings to software.
 
-Planned obsolescence was first developed in the [[1920s]] and [[1930s]] when [[mass production]] had opened every minute aspect of the production process to exacting analysis.
+Planned obsolescence was first developed in the [[1920s]] and [[1930s]] when [[mass production]] had opened every minute aspect of the production process to exacting analysis.  Brooks Stevens was the author of planned obsolescence.  A Wisconsin native, Steven's design works include the modern peanut butter, streamlining various homewares, and even the Oscar Meyer's Weinermobile.  
 
 Estimates of planned obsolescence can influence a [[company]]'s decisions about product [[engineering]]; there is little [[business]] reason to make a product that lasts longer than anyone is expected to use it. Therefore the company can use the least expensive components that satisfy product lifetime projections. Such decisions are part of a broader [[discipline]] known as [[value engineering]].
 
