cleanup (no copyright :-) <assage#67029>

--- a/wiki/assage.wikitext
+++ b/wiki/assage.wikitext
@@ -1,9 +1,12 @@
-ASSAGE: Meaning lots of [[ass]]
+==English==
 
-Derived from the [[American]] term for the rear end, [[Ass]]
+===Noun===
+'''assage''' (''uncountable'')
 
-Some examples of use:
-"It kicks major assage!" meaning it is very good but
-"It sucks major assage!" which means it is very bad.
+# (''slang'') Whimsical term for [[ass]] in the sense of buttocks and in related idioms.
+#: ''That runner had some nice assage.''
+#: ''That song kicks major assage.''
+#: ''That song sucks major assage.''
 
-Property of Lisa A, UK Copyright Dec 2004
+===Related Terms===
+*[[ass]]
