--- a/wiki/fibre.wikitext
+++ b/wiki/fibre.wikitext
@@ -19,6 +19,7 @@
 *French: [[fibre#French|fibre]]
 *Italian: [[fibra]] ''f''
 *Japanese: [[繊維]] (せんい)
+*Spanish: [[fibra]] ''f''
 
 ===Related terms===
 *[[dietary fibre]]
