--- a/wiki/de_novo.wikitext
+++ b/wiki/de_novo.wikitext
@@ -2,4 +2,11 @@
 ===Adverb phrase===
 '''de novo'''
 
-#Anew, afresh, from the beginning; without consideration of previous instances.
+#Anew, afresh, from the beginning; without consideration of previous instances, proceedings or determinations.
+#: ''de novo kidney transplantation''
+#: ''de novo prediction of three-dimensional structures for major protein families''
+#: ''a motion for a de novo hearing''
+#The initial occurrence of cancer in a patient.
+
+====Usage Note====
+Because this is a Latin phrase, it is often italicized when written.
