--- a/wiki/de_novo.wikitext
+++ b/wiki/de_novo.wikitext
@@ -3,9 +3,9 @@
 '''de novo'''
 
 #Anew, afresh, from the beginning; without consideration of previous instances, proceedings or determinations.
-#: ''de novo kidney transplantation''
-#: ''de novo prediction of three-dimensional structures for major protein families''
-#: ''a motion for a de novo hearing''
+#: ''De novo kidney transplantation.''
+#: ''De novo prediction of three-dimensional structures for major protein families.''
+#: ''He filed a motion for a de novo hearing.''
 #The initial occurrence of cancer in a patient.
 
 ====Usage Note====
