added link to Trial de novo <de novo#67036>

--- a/wiki/de_novo.wikitext
+++ b/wiki/de_novo.wikitext
@@ -10,3 +10,6 @@
 
 ====Usage Note====
 Because this is a Latin phrase, it is often italicized when written.
+
+===See also===
+For further information see [[w:Trial de novo|Wikipedia article on ''trial de novo'']].
