added more common def <a priori#66798>

--- a/wiki/a_priori.wikitext
+++ b/wiki/a_priori.wikitext
@@ -2,10 +2,11 @@
 ===Etymology===
 First attested [[w:1710|1710]], from [[Latin]] literally ''from the former'', from [[priori]].
 ===Adjective===
-#Based on hypothesis rather than experiment
+#Known ahead of time.
+#Based on hypothesis rather than experiment.
 #: ''a priori knowledge''
 ===Adverb===
-#Derived by logic
+#Derived by logic.
 
 ===Translations===
 *Russian: [[априори]]
