+Finnish noun <firma#67009>

--- a/wiki/firma.wikitext
+++ b/wiki/firma.wikitext
@@ -1,3 +1,10 @@
+==Finnish==
+
+===Noun===
+'''firma'''
+
+# [[firm]], [[company]].
+
 ==Italian==
 ===Etymology===
 Latin ''[[firmare]]'' < ''[[firmus]]'', cognate include [[firm]], [[fermare]]
