more fi, dewikify <testicle#8156>

--- a/wiki/testicle.wikitext
+++ b/wiki/testicle.wikitext
@@ -10,12 +10,12 @@ From Latin '''[[testiculum]]''', ''testicle'', literally ''little witness'', fro
 see [[WikiSaurus:testicles]]
 
 == Translations ==
-*[[Dutch]]: [[teelbal]] ''m'', [[testikel]] ''n''
-*[[Finnish]]: [[kives]]
-*[[French]]: [[testicule]] ''m''
+*Dutch: [[teelbal]] ''m'', [[testikel]] ''n''
+*Finnish: [[kives]] (1), [[testikkeli]] (1)
+*French: [[testicule]] ''m''
 *[[Latin]]: [[testiculum]] ''n''
 *[[Nahuatl]]: [[ahuacatl]]
-*[[Spanish]]: [[testículo]] ''m'', ''[[cojon]]''
+*Spanish: [[testículo]] ''m'', ''[[cojon]]''
 
 ===Related Terms===
 *[[test]]
