--- a/wiki/homophobia.wikitext
+++ b/wiki/homophobia.wikitext
@@ -11,6 +11,7 @@
 *Along with some other terms ending in ''-phobia'', '''homophobia''' (in its [[extant]] sense) refers to an antipathy rather than a fear, although it can be said that homophobia is motivated by fear.
 
 ====Translations====
+*Finnish: [[homofobia]] (1), [[homokammo]] (1, ''colloquial'')
 *French: [[homophobie]] ''f''
 *Japanese: [[同性恋恐惧症]]
 *Polish: [[homofobia#Polish|homofobia]]
