--- a/wiki/phenotype.wikitext
+++ b/wiki/phenotype.wikitext
@@ -1,5 +1,6 @@
 ===Noun===
 '''phenotype'''
+The appearance of an organism based on a single trait, esp. used in pedigrees.
 
 ====Related terms====
 *[[genotype]]
