/* [[Wiktionary:List of acronyms and abbreviations|Abbreviation]] */ <WMD#64225>

--- a/wiki/WMD.wikitext
+++ b/wiki/WMD.wikitext
@@ -1,3 +1,5 @@
 ==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
 
 Weapon(s) of Mass Destruction
+
+Note:  If mass can neither be created or destroyed, how can WMD's destroy mass?  ;)  Actually, this means the weapons destroy A LOT of stuff.  FYI.
