--- a/wiki/WMD.wikitext
+++ b/wiki/WMD.wikitext
@@ -1,5 +1,6 @@
-==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
+==English==
 
-Weapon(s) of Mass Destruction
+===Abbreviation===
+'''WMD'''
 
-Note:  If mass can neither be created or destroyed, how can WMD's destroy mass?  ;)  Actually, this means the weapons destroy A LOT of stuff.  FYI.
+# Weapons of Mass Destruction, or [[Weapon of Mass Destruction]]
