changed link <WMD#64225>

--- a/wiki/WMD.wikitext
+++ b/wiki/WMD.wikitext
@@ -3,4 +3,4 @@
 ===Abbreviation===
 '''WMD'''
 
-# Weapons of Mass Destruction, or [[Weapon of Mass Destruction]]
+# [[weapon of mass destruction|Weapon(s) of Mass Destruction]]
