/* Translations */ adding latin: organ = oculus, m; of a needle = foramen, n; mark on an animal, oculus, m; of a potato or other tuber, gemma, f. <eye#5447>

--- a/wiki/eye.wikitext
+++ b/wiki/eye.wikitext
@@ -58,7 +58,7 @@ From Middle English, from Old English [[ege|ēge]], [[eage|ēage]]. Cognates inc
 *Italian: [[occhio]] ''m''
 *Japanese: [[目]] ([[め]], me)
 *Korean: [[눈]] (nun)
-*Latin: [[oculus]]
+*Latin: [[oculus]] ''m''
 *North Saami: [[čalbmi]]
 *Norwegian: [[øye]]
 *[[Persian]]: [[چشم|چِشم]] (češm)
@@ -97,6 +97,7 @@ From Middle English, from Old English [[ege|ēge]], [[eage|ēage]]. Cognates inc
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Latin: [[foramen]] ''n''
 *Spanish: [[ojo]] ''m''
 *Swedish: [[öga]] ''n'', [[nålsöga]] ''n''
 |}
@@ -150,6 +151,7 @@ From Middle English, from Old English [[ege|ēge]], [[eage|ēage]]. Cognates inc
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Latin: [[oculus]] ''m''
 |}
 |}
 
@@ -167,6 +169,7 @@ From Middle English, from Old English [[ege|ēge]], [[eage|ēage]]. Cognates inc
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Latin: [[gemma]] ''f''
 *Swedish: [[öga]] ''n''
 |}
 |}
