--- a/wiki/preceptor.wikitext
+++ b/wiki/preceptor.wikitext
@@ -1,2 +1,2 @@
 ===Noun===
-# The principal or headmaster of a school, esp. a private school
+# The headmaster or principal of a school, esp. a private school
