--- a/wiki/Wiktionary.wikitext
+++ b/wiki/Wiktionary.wikitext
@@ -22,7 +22,7 @@
 *[[Finnish]]: Wiki-[[sanakirja]]
 *[[French]]: [[Wiktionnaire]]
 *[[Ga]]: [[Wikishinari]]
-*[[German]]: [[Wikiwörterbuch]]
+*[[German]]: Wiktionary ''n'', [[Wikiwörterbuch]] ''n''
 *[[Gujarati]]: [[વિક્ષનરી]]
 *[[Hebrew]]: [[ויקשנרי]] (Wiktionary)
 *[[Hindi]]: [[विक्षनरी]] विकीशब्दकोश
