--- a/wiki/Judaism.wikitext
+++ b/wiki/Judaism.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 
-Hebrew ''Yehuda'' (Judah) + [[-ism]]. <!-- Please add native Hebrew spelling -->
+Hebrew ''Yehuda'' ([[Judah]]) + [[-ism]]. <!-- Please add native Hebrew spelling -->
 
 ===Proper Noun===
 '''Judaism'''
