--- a/wiki/Hassidism.wikitext
+++ b/wiki/Hassidism.wikitext
@@ -1,2 +1,11 @@
-==Noun==
-#Ultra-[[Orthodox Judaism]]
+==English==
+
+===Noun===
+'''Hassidism''' or '''Chassidism'''
+
+# A [[Jewish]] movement founded in Poland in the 18th century by [[Baal-Shem-Tov]].
+
+===Related Terms===
+*[[Hassid]]
+*[[Hassidic]]
+*[[Hassidic Jew]]
