No, Hassid is not the same as "Hassidic Jew" <Hassid#67056>

--- a/wiki/Hassid.wikitext
+++ b/wiki/Hassid.wikitext
@@ -1,1 +1,6 @@
-#REDIRECT [[Hassidic Jew]]
+==English==
+
+===Noun===
+'''Hassid'''
+
+# A member of one of the three [[Hassidic]] movements in [[Jewish]] history.
