--- a/wiki/Hassidism.wikitext
+++ b/wiki/Hassidism.wikitext
@@ -9,3 +9,5 @@
 *[[Hassid]]
 *[[Hassidic]]
 *[[Hassidic Jew]]
+==External Links==
+Wikipedia Article on [http://en.wikipedia.org/wiki/Hassidic_Judaism Hassidic Judaism]
