--- a/wiki/dick.wikitext
+++ b/wiki/dick.wikitext
@@ -17,6 +17,7 @@
 '''dick'''
 
 #(slang, vulgar) [[penis]]. see also [[WikiSaurus:penis]]
+#(slang, derrogatory) a highly [[contemptable]] person.
 #(''old'') [[detective]].
 
 ====Translations====
