--- a/wiki/dick.wikitext
+++ b/wiki/dick.wikitext
@@ -18,7 +18,7 @@
 
 #(slang, vulgar) [[penis]]. see also [[WikiSaurus:penis]]
 #(slang, derrogatory) a highly [[contemptable]] person.
-#(''old'') [[detective]].
+#(''old'') [[detective]].  ''A private dick.''
 
 ====Translations====
 *[[Finnish]]: [[kalu]] (1), [[mulkku]] (1), [[kyrpä]] (1), [[etsivä]] (2), [[yksityisetsivä]] (2), [[salapoliisi]] (2)
