--- a/wiki/edit.wikitext
+++ b/wiki/edit.wikitext
@@ -1,5 +1,4 @@
 
-
 ==English==
 
 === Etymology ===
@@ -24,3 +23,4 @@ To [[change]] a [[text]], or a [[document]].
 *[[Romanian]]: [[editare]] ''f''
 *[[Spanish]]: [[editar]]
 *[[Swedish]]: [[redigera]]
+*[[Hungarian]]: [[szerkeszt]]
