--- a/wiki/hojillion.wikitext
+++ b/wiki/hojillion.wikitext
@@ -5,7 +5,6 @@
 #(''slang'') The [[postulate]]d number of dollars that would be necessary to pay for non-stop sex with [[prostitute]]s over an average human lifespan.
 
 ====Notes====
-Original usage attributed to Tycho of [http://www.penny-arcade.com Penny Arcade] durring an [http://games.slashdot.org/article.pl?sid=04/11/26/003251&tid=188&tid=133&tid=11&tid=10 interview] on [http://slashdot.org slashdot].  ''"I am not an industry analyst, so I don't feel like I'm qualified to talk about ebb and flow of hojillion dollar industries.''
-Defined by [http://slashdot.org/~wildwood wildwood] of [http://slashdot.org slashdot] in this [http://games.slashdot.org/comments.pl?sid=130843&cid=10944336 post].
+Original usage attributed to Tycho of [http://www.penny-arcade.com Penny Arcade] durring an [http://games.slashdot.org/article.pl?sid=04/11/26/003251&tid=188&tid=133&tid=11&tid=10 interview] on [http://slashdot.org slashdot].  ''"I am not an industry analyst, so I don't feel like I'm qualified to talk about ebb and flow of hojillion dollar industries."'' Defined by [http://slashdot.org/~wildwood wildwood] of [http://slashdot.org slashdot] in this [http://games.slashdot.org/comments.pl?sid=130843&cid=10944336 post].
 
 {{protologism}}
