--- a/wiki/quicksmart.wikitext
+++ b/wiki/quicksmart.wikitext
@@ -4,7 +4,7 @@
 '''quick''' + '''smart'''
 
 ===Adverb===
-*Both [[promptly]] and [[quickly]]. - ''(clean your room up quicksmart!)''
+*both [[promptly]] and [[quickly]]. - ''(clean your room up quicksmart!)''
 
 ===Adjective===
 *both prompt and quick.  - ''(he was quicksmart about cleaning up his room)''
