--- a/wiki/quicksmart.wikitext
+++ b/wiki/quicksmart.wikitext
@@ -7,4 +7,4 @@
 *both [[promptly]] and [[quickly]]. - ''(clean your room up quicksmart!)''
 
 ===Adjective===
-*both prompt and quick.  - ''(he was quicksmart about cleaning up his room)''
+*both [[prompt]] and [[quick]].  - ''(he was quicksmart about cleaning up his room)''
