--- a/wiki/prompt.wikitext
+++ b/wiki/prompt.wikitext
@@ -15,7 +15,8 @@
 #''(Stage and Screen)'' - to show or tell an actor/person the words they should be saying, or actions they should be doing. - (''If he forgets his words I will prompt him'')
 
 ===Noun===
-#'''Prompter''' - the person who does the prompting
+'''Prompter'''
+#the person who does the prompting
 :See also [[teleprompter]] - a piece of equipment that shows the words to be said, in time as they need to be said.
 
 ===Synonyms===
