--- a/wiki/prompt.wikitext
+++ b/wiki/prompt.wikitext
@@ -17,7 +17,7 @@
 ===Noun===
 '''Prompter'''
 #the person who does the prompting
-::Or is their a stage & screen technical term for this role ?
+::Or is there a stage & screen technical term for this role ?
 :See also [[teleprompter]] - a piece of equipment that shows the words to be said, in time as they need to be said.
 
 ===Synonyms===
