--- a/wiki/prompt.wikitext
+++ b/wiki/prompt.wikitext
@@ -21,4 +21,5 @@
 :See also [[teleprompter]] - a piece of equipment that shows the words to be said, in time as they need to be said.
 
 ===Synonyms===
+'''Prompt'''
 *[[Quicksmart]]
