--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -14,5 +14,5 @@
 *{{hi}}: [[नमस्ते]] (to one person), [[नमस्कार]] (to several persons)
 *{{it}}: [[buongiorno]]
 *Japanese: (ohayo gozaimasu)
-
+*Indonesian: [[selamat pagi]]
 [[Category:Phrasebook]]
