--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -13,6 +13,6 @@
 *Hebrew: [[בוקר טוב]] (boker tov)
 *{{hi}}: [[नमस्ते]] (to one person), [[नमस्कार]] (to several persons)
 *{{it}}: [[buongiorno]]
-*Japanese: (ohayo gozaimasu)
+*Japanese: おはようございます(ohayo gozaimasu)
 *Indonesian: [[selamat pagi]]
 [[Category:Phrasebook]]
