--- a/wiki/prompt.wikitext
+++ b/wiki/prompt.wikitext
@@ -8,6 +8,9 @@
 ===Adverb===
 '''Promptly'''
 #Both soon and quickly - (''He promptly got a new job'')
+====Synonyms, Related Terms====
+*see - [[Quicksmart]]
+
 
 ===Verb===
 '''Prompt'''
@@ -19,7 +22,3 @@
 #the person who does the prompting
 ::Or is there a stage & screen technical term for this role ?
 :See also [[teleprompter]] - a piece of equipment that shows the words to be said, in time as they need to be said.
-
-===Synonyms===
-'''Prompt'''
-*[[Quicksmart]]
