--- a/wiki/current_events.wikitext
+++ b/wiki/current_events.wikitext
@@ -1,1 +1,50 @@
-Asparagus porn
+__NOTOC__
+ 	
+This page is to list any interesting new words, abbreviations, etc, that are entering the language. See also [[Neologisms:unstable]]. 	
+ 	
+---- 	
+==A== 	
+*[[aspiratage]] 	
+*[[astroturfing]] 	
+*[[autocannibalism]]
+*[[autotheism]]
+
+==B== 	
+*[[bingo wings]] 	
+ 	
+==C== 	
+*[[chav]] 	
+*[[chugger]] 	
+ 	
+==D== 	
+*[[dittohead]] 	
+*[[dogging]] 	
+ 	
+==F== 	
+*[[fen]] (in plural sense) 	
+*[[flash mob]] 	
+*[[frag]] 	
+ 	
+==G== 	
+*[[gib]] (''computer gaming sense'') 	
+ 	
+==M== 	
+*[[metrosexual]]
+*[[mobisode]]
+
+==P== 	
+*[[pap]] (''verb sense'') 	
+*[[petrolhead]] 	
+*[[President's Daily Briefing]] ([[PDB]]) 	
+*[[phishing]] 	
+ 	
+==Q== 	
+*[[quonzah]] 	
+ 	
+==T== 	
+*[[taxi pole]] 	
+*[[translationary]] 	
+ 	
+==W== 	
+*[[wikify]]
+*[[womps]]
