--- a/wiki/vandalism.wikitext
+++ b/wiki/vandalism.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-#Needless destruction of other people's property.
+#Needless damage or destruction of property, usually someone else's property or common or shared property.
 
 ====Translations====
 *Estonian: Vandalism
