/* Noun */ correct spelling for contemptible <dick#1824>

--- a/wiki/dick.wikitext
+++ b/wiki/dick.wikitext
@@ -17,7 +17,7 @@
 '''dick'''
 
 #(slang, vulgar) [[penis]]. see also [[WikiSaurus:penis]]
-#(slang, derrogatory) a highly [[contemptable]] person.
+#(slang, derrogatory) a highly [[contemptible]] person.
 #(''old'') [[detective]].  ''A private dick.''
 
 ====Translations====
