--- a/wiki/day.wikitext
+++ b/wiki/day.wikitext
@@ -29,6 +29,7 @@ From Middle Engish [[dai]], [[day]], from Old English [[dæg]]. Cognates include
 *Bulgarian: [[ден]] ''m''
 *[[Catalan]]: [[dia]] ''m'', [[jorn]] ''m''
 *Chinese: [[天]] (tiān), [[日]] (rì)
+*Croatian: [[dan]] ''m''
 *Czech: [[den]] ''m''
 *Danish: [[døgn]] (1,3), [[dag]] (2,4,5)
 *Dutch: [[dag]] ''m'' (1,2,3,4,5), [[etmaal]] ''n'' (1,3)
