--- a/wiki/Cronus.wikitext
+++ b/wiki/Cronus.wikitext
@@ -5,6 +5,15 @@
 
 # (''Greek mythology''): Cronus, the son of [[Uranus]] and [[Gaia]] and the youngest of the twelve [[Titan]]s.
 
+===Variant Spellings===
+*[[Cronos]]
+*[[Kronos]]
+*[[Khronos]]
+
+===Commonly Confused With===
+*[[Chronos]]
+*[[Chronus]]
+
 ===See also===
 *[[Saturn]]
 
