--- a/wiki/day.wikitext
+++ b/wiki/day.wikitext
@@ -2,7 +2,7 @@
 ===Etymology===
 From Middle Engish [[dai]], [[day]], from Old English [[dæg]]. Cognates include German [[tag]].
 ===Pronunciation===
-*dā, /deɪ/, /deI/
+*dā, /deɪ/, /<tt>deI</tt>/
 
 ===Noun===
 '''day''' ([[days]])
