--- a/wiki/fasces.wikitext
+++ b/wiki/fasces.wikitext
@@ -1,3 +1,8 @@
 ==English==
 ===Noun===
-#A [[Roman]] symbol of judicial authority consisting of a bundle of [[wood]]en sticks, with an [[axe]] blade embedded in the center.
+'''fasces''' ''plural'' (''singular'' fascis)
+
+#A [[Roman]] symbol of judicial authority consisting of a bundle of [[wood]]en sticks, with an [[axe]] blade embedded in the centre.
+
+===Translations===
+*Japanese: [[束桿]]
