--- a/wiki/carpenter.wikitext
+++ b/wiki/carpenter.wikitext
@@ -1,4 +1,7 @@
-*{{en}}: [[carpenter]] [[:en:carpenter|°]]
+==English==
+===Noun===
+'''carpenter'''
+#A person in the profession of [[carpentry]].
 *{{fr}}: [[menuisier]] [[:fr:menuisier|°]]
 *{{hu}}: [[asztalos]] [[:hu:asztalos|°]] 
 *{{de}}: [[Schreiner]] [[:de:Schreiner|°]]
