--- a/wiki/biker.wikitext
+++ b/wiki/biker.wikitext
@@ -1,4 +1,8 @@
-*{{en}}: [[biker]] [[:en:biker|°]]
+==English==
+===Noun===
+'''biker'''
+#A person who rides [[bike]]s.
+====Translation====
 *{{fr}}: [[cycliste]] [[:fr:cycliste|°]]
 *{{hu}}: [[biciklista]] [[:hu:biciklista|°]] 
 *{{de}}: [[Radfahrer]] [[:de:Radfahrer|°]]
