--- a/wiki/evening.wikitext
+++ b/wiki/evening.wikitext
@@ -1,4 +1,10 @@
-*{{en}}: [[evening]] [[:en:evening|°]]
+==English==
+===Noun===
+'''evening'''
+#The waning hours of the day.
+#A concluding time period.
+#:''it was the evening of the Roman Empire"
+====Translation====
 *{{fr}}: [[soir]] [[:fr:soir|°]]
 *{{hu}}: [[este]] [[:hu:este|°]]
 *{{de}}: [[Abend]] [[:de:Abend|°]]
