/* External Links */ <Hassidism#67050>

--- a/wiki/Hassidism.wikitext
+++ b/wiki/Hassidism.wikitext
@@ -9,5 +9,5 @@
 *[[Hassid]]
 *[[Hassidic]]
 *[[Hassidic Jew]]
-==External Links==
-Wikipedia Article on [http://en.wikipedia.org/wiki/Hassidic_Judaism Hassidic Judaism]
+==See Also==
+*Wikipedia Article on [[en:Hassidic_Judaism|Hassidic Judaism]
