/* External Links */ <Hassidism#67050>

--- a/wiki/Hassidism.wikitext
+++ b/wiki/Hassidism.wikitext
@@ -10,4 +10,4 @@
 *[[Hassidic]]
 *[[Hassidic Jew]]
 ==See Also==
-*Wikipedia Article on [[en:Hassidic_Judaism|Hassidic Judaism]
+*Wikipedia Article on [[en:Hassidic_Judaism|Hassidic Judaism]]
