--- a/wiki/mulatto.wikitext
+++ b/wiki/mulatto.wikitext
@@ -1,2 +1,3 @@
-==Noun==
-#A person of mixed [[negro]] and [[caucasian]] descent
+==English==
+===Noun===
+#A person of mixed [[African]] and [[Caucasian]] descent
