--- a/wiki/evening.wikitext
+++ b/wiki/evening.wikitext
@@ -4,9 +4,16 @@
 #The waning hours of the day.
 #A concluding time period.
 #:''it was the evening of the Roman Empire"
+
 ====Translation====
+*Chinese: [[晚上]], [[黄昏]]
 *{{fr}}: [[soir]] [[:fr:soir|°]]
 *{{hu}}: [[este]] [[:hu:este|°]]
 *{{de}}: [[Abend]] [[:de:Abend|°]]
 *{{it}}: [[sera]] [[:it:sera|°]]
+*Japanese: [[夕方]], [[日暮れ]]; [[晩年]], [[末期]]
 *{{es}}: [[tarde]] [[:es:tarde|°]]
+
+===Related terms===
+*[[even]]
+*[[evening star]]
