--- a/wiki/more.wikitext
+++ b/wiki/more.wikitext
@@ -18,6 +18,7 @@
 ====Translations====
 *Dutch: [[meer]] (1,2), [[verder]] (2)
 *Finnish: [[-mpi]] (1), [[enemmän]] (2), [[lisää]] (2)
+*Italian: [[più]], [[ancora]]
 *{{ja}}: [[もっと]] (motto)
 *[[Slovak]]: [[viac]], [[viacej]], [[viacero]] (1); [[navyše]] (2)
 *Swedish: [[mer]] (1,2), [[ytterligare]] (2)
