--- a/wiki/buffoon.wikitext
+++ b/wiki/buffoon.wikitext
@@ -2,6 +2,8 @@
 
 A person usually becomes a buffoon either through natural disorganisation and clumsiness, or by attempting to gain [[attention]] through [[humour]] but failing to pull it off. An individual may also choose to become a buffoon in order to gain a unique place in a [[social group]], although this is generally a last resort.
 
+The word is derived from the name of an 18th-century French taxonomist named [[Georges Buffon]]. As the science of [[taxonomy]] progressed almost all of his conclusions were found to be completely useless and incorrect, hense the connotation of the term.
+
 == See also ==
 *[[Pretending to be stupid]]
 
