--- a/wiki/quadroon.wikitext
+++ b/wiki/quadroon.wikitext
@@ -1,2 +1,4 @@
-==Noun==
-#a person of one fourth [[negro]] descent.
+==English==
+===Noun===
+'''Quadroon'''
+#a person of one fourth [[African]] descent.
