--- a/wiki/fair.wikitext
+++ b/wiki/fair.wikitext
@@ -1,7 +1,7 @@
 ==English==
-
-===Homophones===
-*[[fare]]
+===Pronuciation===
+*IPA: /feə/
+:homophones: [[fare]]
 
 ===Adjective===
 '''fair'''
@@ -14,6 +14,7 @@
 *[[pretty]]
 
 ====Translations====
+*Chinese: [[公正的]]
 *[[Danish]]: [[rimelig]] (1); [[ærlig]] (2); [[retfærdig]] (3); [[lyshudet]] (4); [[smuk]] (5)
 *[[Dutch]]: [[eerlijk]] (2), [[rechtschapen]] (3), [[correct]] (3), [[bleek]] (4), [[bleekjes]] (4), [[bevallig]] (5), [[mooi]] (5)
 *[[Hebrew]]: [[צודק]] , [[יפה]]
@@ -29,6 +30,3 @@
 *Dutch: [[kermis]] ''m''
 *Portuguese: [[feira]] ''f''
 *Spanish: [[feria]] ''f''
-
-==Multilingual links==
-*[[English]]-[[Hebrew]]-[[Russian]]: fair фея ([[fay]]), фея [[יפהפיה]] /яфэйфия/ ([[beautiful]])(прелестная)
