could probably use some more work <negro#35259>

--- a/wiki/negro.wikitext
+++ b/wiki/negro.wikitext
@@ -1,7 +1,7 @@
 ==English==
-===Noun===
-'''Negro''' plural negros,negroes(Often capitalized) A person of [[African]] descent, with [[negroid]] coloring and facial characteristics.  (Note that [[black]] appears to be the currently preferred term for Negros in the US.)
-
+===Proper Noun===
+'''Negro''' plural negros, negroes (Often capitalized) 
+#''Archaic.'' A person of [[sub-Saharan]] [[African]] descent; [[black]].
 ====Derived terms====
 *[[negress]]
 *[[negroid]]
@@ -17,34 +17,32 @@
 ===Adjective===
 '''negro'''
 
-#Pertaining to the culture of Negros, especially American Negros.
-#Black or dark brown in color.
+#''Archaic.'' Relating to the black ethnicity 
+#''Archaic.'' Black or dark brown in color.
 
 ==== Translations ====
 * Dutch: [[zwart]], [[zwarte]]
 * Slovak: [[černošský]] -á -é (1), [[čierny]] -a -e (1, 2)
+
+=== Usage Note ===
+#The word is considered acceptable only in a historical context. [[Black]] and if applicable (though to a lesser extent) [[African-American]] are the prefered alternatives.
 
 ===See also===
 *[[mulatto]]
 *[[octaroon]]
 *[[quadroon]]
 
-----
-
 ==Portuguese==
 ===Noun===
 '''negro'''
-
 # negro
-
-----
 
 ==Spanish==
+
 ===Noun===
-'''negro''' (f: [[negra]], mpl: [[negros]], fpl: [[negras]]; m diminutive: [[negrito]], f diminutive: [[negrita]])
-# [[black]] (color)
-# negro
+'''negro''' (f: negra, mpl: negros, fpl: negras; m diminutive: negrito, f diminutive: negrita)
+# the [[black]] color
+# the black ethnicity
 
 ===Adj===
-
-#[[black]]
+#black
