--- a/wiki/Roma.wikitext
+++ b/wiki/Roma.wikitext
@@ -14,12 +14,24 @@
 *[http://www.coe.int/T/E/Social_Cohesion/Roma_Gypsies/ Council of Europe page on the Roma]
 *[[w:Roma_%28people%29|Wikipedia article on the Roma]]
 
-==Italian==
+----
 
+==Italian==
 ===Proper Noun===
-'''Roma'''
+'''Roma''' ''f''
 
 # [[Rome]]
+
+===Related terms===
+*[[romanesco]]
+*[[Romania]]
+*[[romanismo]]
+*[[romanista]]
+*[[romanità]]
+*[[romanizzare]]
+*[[romano]]
+
+----
 
 ==Latin==
 ===Proper Noun===
@@ -27,11 +39,11 @@
 
 #[[Rome]]
 
-====Derived Words====
+====Derived terms====
 *[[Romana]]
 *[[Romanus]]
 
-====Related Words====
+====Related terms====
 *[[Romulus]]
 
 ===Proper Noun===
