--- a/wiki/romano.wikitext
+++ b/wiki/romano.wikitext
@@ -1,7 +1,17 @@
 ==English==
-
 ===Noun===
-
 '''romano'''
 
 #A hard, sharp cheese served grated as a garnish.
+----
+
+==Italian==
+===Adjective===
+'''romano'''
+
+# [[Roman]]
+
+===Related terms===
+*[[Roma]]
+*[[romanamente]]
+*[[romanzo]]
