--- a/wiki/negro.wikitext
+++ b/wiki/negro.wikitext
@@ -2,6 +2,7 @@
 ===Proper Noun===
 '''Negro''' plural negros, negroes (Often capitalized) 
 #''Archaic.'' A person of [[sub-Saharan]] [[African]] descent; [[black]].
+
 ====Derived terms====
 *[[negress]]
 *[[negroid]]
@@ -18,7 +19,7 @@
 '''negro'''
 
 #''Archaic.'' Relating to the black ethnicity 
-#''Archaic.'' Black or dark brown in color.
+#''Archaic.'' Black or dark brown in colour.
 
 ==== Translations ====
 * Dutch: [[zwart]], [[zwarte]]
@@ -32,17 +33,20 @@
 *[[octaroon]]
 *[[quadroon]]
 
+----
+
 ==Portuguese==
 ===Noun===
 '''negro'''
 # negro
 
-==Spanish==
+----
 
+==Spanish==
 ===Noun===
 '''negro''' (f: negra, mpl: negros, fpl: negras; m diminutive: negrito, f diminutive: negrita)
-# the [[black]] color
+# the [[black]] colour
 # the black ethnicity
 
-===Adj===
+===Adjective===
 #black
