<give-away shop#58239>

--- a/wiki/give-away_shop.wikitext
+++ b/wiki/give-away_shop.wikitext
@@ -8,4 +8,4 @@
 * German: [[Umsonstladen]]
 * Italian: [[freeshop]]
 * Norwegian: [[gratis butikk]]
-* Spanish: [[tiendra gratis]]
+* Spanish: [[tienda gratis]]
