--- a/wiki/%E0%A4%AE%E0%A4%A7%E0%A5%81%E0%A4%B0.wikitext
+++ b/wiki/%E0%A4%AE%E0%A4%A7%E0%A5%81%E0%A4%B0.wikitext
@@ -4,4 +4,4 @@
 
 # sweet
 
-[[अहं|अहम्]] मधुरं [[तरंगफलकम|तरंगफलक]][[विन्देयम्|विन्द्]]।
+[[अहम्|अहं]] मधुरं [[तरंगफलक|तरंगफलकम]][[विन्द्|विन्देयम्]]।
