/* Adjective */ +fi <fair#37319>

--- a/wiki/fair.wikitext
+++ b/wiki/fair.wikitext
@@ -5,6 +5,7 @@
 
 ===Adjective===
 '''fair'''
+#{{substub}}
 
 ====Synonyms====
 *[[equitable]]
@@ -14,11 +15,24 @@
 *[[pretty]]
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Chinese: [[公正的]]
 *[[Danish]]: [[rimelig]] (1); [[ærlig]] (2); [[retfærdig]] (3); [[lyshudet]] (4); [[smuk]] (5)
 *[[Dutch]]: [[eerlijk]] (2), [[rechtschapen]] (3), [[correct]] (3), [[bleek]] (4), [[bleekjes]] (4), [[bevallig]] (5), [[mooi]] (5)
+*{{fi}}: [[reilu]]
 *[[Hebrew]]: [[צודק]] , [[יפה]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *[[Portuguese]]: [[honesto]] (2), [[justo]] (3)
+|}
+|}
 
 ===Noun===
 '''fair'''
