--- a/wiki/evening.wikitext
+++ b/wiki/evening.wikitext
@@ -6,13 +6,26 @@
 #:''it was the evening of the Roman Empire"
 
 ====Translation====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Chinese: [[晚上]], [[黄昏]]
 *{{fr}}: [[soir]] [[:fr:soir|°]]
 *{{hu}}: [[este]] [[:hu:este|°]]
 *{{de}}: [[Abend]] [[:de:Abend|°]]
+*{{fi}}: [[ilta]]
 *{{it}}: [[sera]] [[:it:sera|°]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[夕方]], [[日暮れ]]; [[晩年]], [[末期]]
 *{{es}}: [[tarde]] [[:es:tarde|°]]
+|}
+|}
 
 ===Related terms===
 *[[even]]
