--- a/wiki/left.wikitext
+++ b/wiki/left.wikitext
@@ -58,8 +58,9 @@
 
 ==== Expressions ====
 
-[[to the left]]
-[[left-handed]]
+*[[to the left]]
+*[[left-handed]]
+*[[two left feet]]
 
 === Verb ===
 '''left'''
