--- a/wiki/heat_wave.wikitext
+++ b/wiki/heat_wave.wikitext
@@ -3,3 +3,7 @@
 ===Noun===
 '''heat wave'''
 #A period of exceptionally [[hot]] [[weather]]
+
+===Translations===
+*French: [[vague de chaleur]] ''f''
+*Japanese: [[熱波]]
